delete null district and type

--- a/model.ipynb
+++ b/model.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "(263687, 16)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "(197860, 16)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "Name: province, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +127,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rd/2kcwkt39359dzbbccdlxtgsm0000gn/T/ipykernel_6000/1070282014.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_type_pro[\"province\"] = \"กรุงเทพมหานคร\"\n"
+     ]
+    }
+   ],
    "source": [
-    "df_type_pro = df_type[df_type[\"province\"].isin(bangkok)]"
+    "df_type_pro = df_type[df_type[\"province\"].isin(bangkok)]\n",
+    "df_type_pro[\"province\"] = \"กรุงเทพมหานคร\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +159,7 @@
        "(197767, 16)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +190,7 @@
        "Name: timestamp, Length: 197767, dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +488,7 @@
        "      <td>Bang Pakaeo, Opposite Soi Suksawat, แขวงบางปะก...</td>\n",
        "      <td>บางปะกอก</td>\n",
        "      <td>ราษฎร์บูรณะ</td>\n",
-       "      <td>จังหวัดกรุงเทพมหานคร</td>\n",
+       "      <td>กรุงเทพมหานคร</td>\n",
        "      <td>2023-04-29 10:49:41.286183+00:00</td>\n",
        "      <td>เสร็จสิ้น</td>\n",
        "      <td>NaN</td>\n",
@@ -586,18 +600,18 @@
        "263395  Bang Pakaeo, Opposite Soi Suksawat, แขวงบางปะก...    บางปะกอก   \n",
        "263414  822 ถ. อโศก - ดินแดง แขวงบางกะปิ เขตห้วยขวาง ก...     บางกะปิ   \n",
        "\n",
-       "           district              province                        timestamp  \\\n",
-       "1               NaN         กรุงเทพมหานคร 2021-09-03 12:51:09.453003+00:00   \n",
-       "4            ประเวศ         กรุงเทพมหานคร 2021-09-19 14:56:08.924992+00:00   \n",
-       "10             สาทร         กรุงเทพมหานคร 2021-09-26 05:03:52.594898+00:00   \n",
-       "12              NaN         กรุงเทพมหานคร 2021-10-14 10:45:27.713884+00:00   \n",
-       "25         ลาดพร้าว         กรุงเทพมหานคร 2021-12-09 12:29:08.408763+00:00   \n",
-       "...             ...                   ...                              ...   \n",
-       "263362        บางแค         กรุงเทพมหานคร 2023-04-29 09:34:36.606648+00:00   \n",
-       "263365      ทุ่งครุ         กรุงเทพมหานคร 2023-04-29 09:43:58.409244+00:00   \n",
-       "263367      ทุ่งครุ         กรุงเทพมหานคร 2023-04-29 09:45:51.407009+00:00   \n",
-       "263395  ราษฎร์บูรณะ  จังหวัดกรุงเทพมหานคร 2023-04-29 10:49:41.286183+00:00   \n",
-       "263414     ห้วยขวาง         กรุงเทพมหานคร 2023-04-29 11:27:33.326666+00:00   \n",
+       "           district       province                        timestamp  \\\n",
+       "1               NaN  กรุงเทพมหานคร 2021-09-03 12:51:09.453003+00:00   \n",
+       "4            ประเวศ  กรุงเทพมหานคร 2021-09-19 14:56:08.924992+00:00   \n",
+       "10             สาทร  กรุงเทพมหานคร 2021-09-26 05:03:52.594898+00:00   \n",
+       "12              NaN  กรุงเทพมหานคร 2021-10-14 10:45:27.713884+00:00   \n",
+       "25         ลาดพร้าว  กรุงเทพมหานคร 2021-12-09 12:29:08.408763+00:00   \n",
+       "...             ...            ...                              ...   \n",
+       "263362        บางแค  กรุงเทพมหานคร 2023-04-29 09:34:36.606648+00:00   \n",
+       "263365      ทุ่งครุ  กรุงเทพมหานคร 2023-04-29 09:43:58.409244+00:00   \n",
+       "263367      ทุ่งครุ  กรุงเทพมหานคร 2023-04-29 09:45:51.407009+00:00   \n",
+       "263395  ราษฎร์บูรณะ  กรุงเทพมหานคร 2023-04-29 10:49:41.286183+00:00   \n",
+       "263414     ห้วยขวาง  กรุงเทพมหานคร 2023-04-29 11:27:33.326666+00:00   \n",
        "\n",
        "            state  star  count_reopen                    last_activity  \\\n",
        "1       เสร็จสิ้น   NaN           NaN 2022-06-04 15:34:14.609206+00:00   \n",
@@ -628,7 +642,7 @@
        "[197767 rows x 17 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,33 +653,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method IndexOpsMixin.value_counts of 1         2021-09-03 12:51:09.453003+00\n",
-       "4         2021-09-19 14:56:08.924992+00\n",
-       "10        2021-09-26 05:03:52.594898+00\n",
-       "12        2021-10-14 10:45:27.713884+00\n",
-       "25        2021-12-09 12:29:08.408763+00\n",
-       "                      ...              \n",
-       "263362    2023-04-29 09:34:36.606648+00\n",
-       "263365    2023-04-29 09:43:58.409244+00\n",
-       "263367    2023-04-29 09:45:51.407009+00\n",
-       "263395    2023-04-29 10:49:41.286183+00\n",
-       "263414    2023-04-29 11:27:33.326666+00\n",
-       "Name: timestamp, Length: 197767, dtype: object>"
+       "count                        197767\n",
+       "mean     43 days 12:38:07.521801387\n",
+       "std      68 days 19:36:05.771616225\n",
+       "min          0 days 00:00:14.963721\n",
+       "25%       1 days 20:32:04.490217500\n",
+       "50%          8 days 08:01:26.318450\n",
+       "75%         53 days 04:20:00.341129\n",
+       "max        464 days 10:21:28.527899\n",
+       "Name: duration, dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from datetime import datetime, timezone"
+    "df_type_pro[\"duration\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_type_pro = df_type_pro[df_type_pro[\"district\"].isnull() == False]\n",
+    "df_type_pro = df_type_pro[df_type_pro[\"type\"].isnull() == False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(197636, 17)"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_type_pro.shape"
    ]
   },
   {
