rename file model to data_cleansing

--- a/data_cleansing.ipynb
+++ b/data_cleansing.ipynb
@@ -681,26 +681,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_type_pro = df_type_pro[df_type_pro[\"district\"].isnull() == False]\n",
-    "df_type_pro = df_type_pro[df_type_pro[\"type\"].isnull() == False]"
+    "df_type_pro = df_type_pro[df_type_pro[\"type\"].isnull() == False]\n",
+    "df_type_pro = df_type_pro[df_type_pro[\"type\"] != \"{}\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(197636, 17)"
+       "(148967, 17)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
