export data_cleaned.csv

--- a/data_cleansing.ipynb
+++ b/data_cleansing.ipynb
@@ -8,16 +8,11 @@
    "source": [
     "import pandas as pd\n",
     "import pyspark\n",
-    "import matplotlib\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime, timezone\n"
+    "import matplotlib\n",
+    "from datetime import datetime, timezone\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import classification_report,confusion_matrix"
    ]
   },
   {
@@ -47,125 +42,9 @@
     }
    ],
    "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(197860, 16)"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "df_type = df[df[\"state\"] == \"เสร็จสิ้น\"]\n",
-    "df_type.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "กรุงเทพมหานคร                   181941\n",
-       "จังหวัดกรุงเทพมหานคร             15816\n",
-       "สมุทรปราการ                         47\n",
-       "จังหวัดจังหวัด กรุงเทพมหานคร         8\n",
-       "นนทบุรี                              5\n",
-       "จังหวัดLac                           5\n",
-       "จังหวัดปทุมธานี                      4\n",
-       "ปทุมธานี                             3\n",
-       "ภูเก็ต                               3\n",
-       "จังหวัดนนทบุรี                       3\n",
-       "จังหวัดสมุทรปราการ                   3\n",
-       "ตาก                                  2\n",
-       "จังหวัดสมุทรสาคร                     2\n",
-       "ลำพูน                                1\n",
-       "ศรีสะเกษ                             1\n",
-       "จังหวัดพระนครศรีอยุธยา               1\n",
-       "สมุทรสงคราม                          1\n",
-       "นครสวรรค์                            1\n",
-       "จังหวัดฉะเชิงเทรา                    1\n",
-       "ขอนแก่น                              1\n",
-       "จังหวัดBangkok                       1\n",
-       "นครปฐม                               1\n",
-       "จังหวัดจังหวัดกรุงเทพมหานคร          1\n",
-       "จังหวัดจ.ฉะเชิงเทรา                  1\n",
-       "พิษณุโลก                             1\n",
-       "Name: province, dtype: int64"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_type[\"province\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bangkok = [\"กรุงเทพมหานคร\",\"จังหวัดกรุงเทพมหานคร\",\"จังหวัดจังหวัด กรุงเทพมหานคร\",\"จังหวัดBangkok\",\"จังหวัดจังหวัดกรุงเทพมหานคร\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/rd/2kcwkt39359dzbbccdlxtgsm0000gn/T/ipykernel_6000/1070282014.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_type_pro[\"province\"] = \"กรุงเทพมหานคร\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_type_pro = df_type[df_type[\"province\"].isin(bangkok)]\n",
-    "df_type_pro[\"province\"] = \"กรุงเทพมหานคร\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(197767, 16)"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_type_pro.shape"
+    "bangkok = [\"กรุงเทพมหานคร\",\"จังหวัดกรุงเทพมหานคร\",\"จังหวัดจังหวัด กรุงเทพมหานคร\",\"จังหวัดBangkok\",\"จังหวัดจังหวัดกรุงเทพมหานคร\"]\n",
+    "df_type_pro = df_type[df_type[\"province\"].isin(bangkok)]"
    ]
   },
   {
@@ -196,7 +75,9 @@
     }
    ],
    "source": [
-    "df_type_pro[\"timestamp\"]"
+    "df_type_pro[\"timestamp\"]=pd.to_datetime(df_type_pro[\"timestamp\"])\n",
+    "df_type_pro[\"last_activity\"] = pd.to_datetime(df_type_pro[\"last_activity\"])\n",
+    "df_type_pro[\"duration\"] = df_type_pro[\"last_activity\"]-df_type_pro[\"timestamp\"]"
    ]
   },
   {
@@ -224,8 +105,9 @@
     }
    ],
    "source": [
-    "df_type_pro[\"timestamp\"] = pd.to_datetime(df_type_pro[\"timestamp\"])\n",
-    "df_type_pro[\"last_activity\"] = pd.to_datetime(df_type_pro[\"last_activity\"])"
+    "df_type_pro = df_type_pro[df_type_pro[\"district\"].isnull() == False]\n",
+    "df_type_pro = df_type_pro[df_type_pro[\"type\"].isnull() == False]\n",
+    "df_type_pro = df_type_pro[df_type_pro[\"type\"] != \"{}\"]"
    ]
   },
   {
@@ -247,7 +129,10 @@
     }
    ],
    "source": [
-    "df_type_pro[\"duration\"] = df_type_pro[\"last_activity\"]-df_type_pro[\"timestamp\"]"
+    "df_type_pro_dpro = df_type_pro.drop(columns=[\"province\",\"state\",\"photo\",\"photo_after\"])\n",
+    "df_type_pro_dpro['type'] = [x[1:-1] for x in df_type_pro_dpro['type']]\n",
+    "df_type_pro_dpro['type']= df_type_pro_dpro['type'].str.split(\",\", n = 1, expand = False)\n",
+    "type_df = df_type_pro_dpro[df_type_pro_dpro.type.apply(lambda x: len(x)) == 1]"
    ]
   },
   {
@@ -648,7 +533,7 @@
     }
    ],
    "source": [
-    "df_type_pro"
+    "df_feature = df_type_pro_dpro[['type', 'district','timestamp','duration']]"
    ]
   },
   {
@@ -676,46 +561,10 @@
     }
    ],
    "source": [
-    "df_type_pro[\"duration\"].describe()"
+    "model = GridSearchCV(estimator=RandomForestRegressor(),param_grid=dict(criterion=['gini','entropy'],max_depth=[2,3,6],min_samples_leaf=[2,5,10],\n",
+    "    n_estimators=[100,200], random_state=[2020]),scoring='f1_weighted',cv=5,n_jobs=-1\n",
+    ") "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_type_pro = df_type_pro[df_type_pro[\"district\"].isnull() == False]\n",
-    "df_type_pro = df_type_pro[df_type_pro[\"type\"].isnull() == False]\n",
-    "df_type_pro = df_type_pro[df_type_pro[\"type\"] != \"{}\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(148967, 17)"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_type_pro.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
