fix code in model.py

--- a/data_cleansing.ipynb
+++ b/data_cleansing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "from datetime import datetime, timezone\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.metrics import classification_report,confusion_matrix"
+    "from sklearn.metrics import classification_report,confusion_matrix\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +261,7 @@
        "[103702 rows x 4 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +480,7 @@
        "[103702 rows x 4 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +491,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>district</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>duration_hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>[สะพาน]</td>\n",
+       "      <td>สาทร</td>\n",
+       "      <td>2021-09-26 05:03:52.594898+00:00</td>\n",
+       "      <td>6068.222133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>[ความสะอาด]</td>\n",
+       "      <td>ประเวศ</td>\n",
+       "      <td>2021-12-18 14:50:52.437512+00:00</td>\n",
+       "      <td>4264.762677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>[ท่อระบายน้ำ]</td>\n",
+       "      <td>ประเวศ</td>\n",
+       "      <td>2021-12-22 10:15:33.294829+00:00</td>\n",
+       "      <td>4322.942139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>[ความสะอาด]</td>\n",
+       "      <td>ประเวศ</td>\n",
+       "      <td>2021-12-28 03:59:06.003252+00:00</td>\n",
+       "      <td>4706.848976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>229</th>\n",
+       "      <td>[สะพาน]</td>\n",
+       "      <td>สาทร</td>\n",
+       "      <td>2022-01-16 11:08:54.141813+00:00</td>\n",
+       "      <td>3788.966330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>273123</th>\n",
+       "      <td>[ทางเท้า]</td>\n",
+       "      <td>ราษฎร์บูรณะ</td>\n",
+       "      <td>2023-05-16 11:13:58.680742+00:00</td>\n",
+       "      <td>3.145034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>273124</th>\n",
+       "      <td>[ทางเท้า]</td>\n",
+       "      <td>ราษฎร์บูรณะ</td>\n",
+       "      <td>2023-05-16 11:16:13.611590+00:00</td>\n",
+       "      <td>3.082024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>273128</th>\n",
+       "      <td>[ทางเท้า]</td>\n",
+       "      <td>ราษฎร์บูรณะ</td>\n",
+       "      <td>2023-05-16 11:18:30.176726+00:00</td>\n",
+       "      <td>3.024274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>273129</th>\n",
+       "      <td>[ทางเท้า]</td>\n",
+       "      <td>คลองเตย</td>\n",
+       "      <td>2023-05-16 11:18:43.661156+00:00</td>\n",
+       "      <td>2.218895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>273130</th>\n",
+       "      <td>[กีดขวาง]</td>\n",
+       "      <td>ราษฎร์บูรณะ</td>\n",
+       "      <td>2023-05-16 11:19:11.354931+00:00</td>\n",
+       "      <td>2.986542</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103702 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 type     district                        timestamp  \\\n",
+       "10            [สะพาน]         สาทร 2021-09-26 05:03:52.594898+00:00   \n",
+       "111       [ความสะอาด]       ประเวศ 2021-12-18 14:50:52.437512+00:00   \n",
+       "153     [ท่อระบายน้ำ]       ประเวศ 2021-12-22 10:15:33.294829+00:00   \n",
+       "179       [ความสะอาด]       ประเวศ 2021-12-28 03:59:06.003252+00:00   \n",
+       "229           [สะพาน]         สาทร 2022-01-16 11:08:54.141813+00:00   \n",
+       "...               ...          ...                              ...   \n",
+       "273123      [ทางเท้า]  ราษฎร์บูรณะ 2023-05-16 11:13:58.680742+00:00   \n",
+       "273124      [ทางเท้า]  ราษฎร์บูรณะ 2023-05-16 11:16:13.611590+00:00   \n",
+       "273128      [ทางเท้า]  ราษฎร์บูรณะ 2023-05-16 11:18:30.176726+00:00   \n",
+       "273129      [ทางเท้า]      คลองเตย 2023-05-16 11:18:43.661156+00:00   \n",
+       "273130      [กีดขวาง]  ราษฎร์บูรณะ 2023-05-16 11:19:11.354931+00:00   \n",
+       "\n",
+       "        duration_hour  \n",
+       "10        6068.222133  \n",
+       "111       4264.762677  \n",
+       "153       4322.942139  \n",
+       "179       4706.848976  \n",
+       "229       3788.966330  \n",
+       "...               ...  \n",
+       "273123       3.145034  \n",
+       "273124       3.082024  \n",
+       "273128       3.024274  \n",
+       "273129       2.218895  \n",
+       "273130       2.986542  \n",
+       "\n",
+       "[103702 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
